force-app/main/default/objects/Intake_Checklist__c/Intake_Checklist__c.object-meta.xml
<CustomObject>
    <label>Intake Checklist</label>
    <pluralLabel>Intake Checklists</pluralLabel>
    <nameField>
        <displayFormat>IC-{0000}</displayFormat>
        <label>Checklist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks the progress of Appeals &amp; Grievances intake process</description>
</CustomObject>