force-app/main/default/objects/Intake_Checklist__c/fields/AOR_Validated__c.field-meta.xml
<CustomField>
    <fullName>AOR_Validated__c</fullName>
    <label>AOR Validated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>