force-app/main/default/objects/Intake_Checklist__c/fields/Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Case_Created__c</fullName>
    <label>Case Created</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>