force-app/main/default/objects/Intake_Checklist__c/fields/Complaint_Details_Captured__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Details_Captured__c</fullName>
    <label>Complaint Details Captured</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>