force-app/main/default/objects/Intake_Checklist__c/fields/Conversation_ID__c.field-meta.xml
<CustomField>
    <fullName>Conversation_ID__c</fullName>
    <label>Conversation ID</label>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <description>Links to the Agentforce conversation</description>
</CustomField>