force-app/main/default/objects/Intake_Checklist__c/fields/Created_Case__c.field-meta.xml
<CustomField>
    <fullName>Created_Case__c</fullName>
    <label>Created Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Intake Checklists</relationshipLabel>
    <relationshipName>Intake_Checklists</relationshipName>
</CustomField>