force-app/main/default/objects/Intake_Checklist__c/fields/Intake_Basics_Set__c.field-meta.xml
<CustomField>
    <fullName>Intake_Basics_Set__c</fullName>
    <label>Intake Basics Set</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>