force-app/main/default/objects/Intake_Checklist__c/fields/Late_Filing_Checked__c.field-meta.xml
<CustomField>
    <fullName>Late_Filing_Checked__c</fullName>
    <label>Late Filing Checked</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>