force-app/main/default/objects/Intake_Checklist__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intake Checklists</relationshipLabel>
    <relationshipName>Intake_Checklists</relationshipName>
</CustomField>