force-app/main/default/objects/Intake_Checklist__c/fields/Member_Identified__c.field-meta.xml
<CustomField>
    <fullName>Member_Identified__c</fullName>
    <label>Member Identified</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>