force-app/main/default/objects/Intake_Checklist__c/fields/Service_Type_Determined__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Determined__c</fullName>
    <label>Service Type Determined</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>